Fix scaling on smaller thumbs and use a sub-pixel scale to hide black lines around covers that don't fit exactly

--- a/app/assets/stylesheets/ui/thumbs/tiles/tiles.css
+++ b/app/assets/stylesheets/ui/thumbs/tiles/tiles.css
@@ -16,6 +16,7 @@
 
   text-align: left;
   text-decoration: none;
+  background: #000 center/contain no-repeat;
   border-radius: var(--thumb-border-radius);
   color: #fff;
 }
@@ -26,5 +27,5 @@
   width: 100%;
   height: 100%;
   border-radius: inherit;
-  background: #000;
+  transform: scale(1.008445);
 }
